# auto-eda

./: .gitignore  CLAUDE.md  README.md  ideate.txt  pyproject.toml
examples/: make_messy.py  messy.csv
src/auto_eda/: __init__.py  cleaning.py  cli.py  config.py  eda.py  findings.py  ingest.py  profiling.py  quality.py
src/auto_eda/detectors/: __init__.py  duplicates.py  formatting.py  missing.py  outliers.py  structure.py  types.py
src/auto_eda/llm/: prompts.py  provider.py  ranker.py
src/auto_eda/render/: charts.py  report.py  terminal.py
tests/: conftest.py  test_cleaning.py  test_detectors.py  test_ingest.py  test_quality.py  test_ranker.py
