[project]
name = "auto-eda"
version = "0.1.0"
description = "LLM-prioritized data cleaning and EDA for CSV files: deterministic detection, ranked findings, reproducible cleaning."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aarul Aggarwal" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.20",
    "pydantic>=2.7",
    "httpx>=0.27",
    "anthropic>=0.40",
    "charset-normalizer>=3.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
auto-eda = "auto_eda.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_eda"]

[tool.pytest.ini_options]
testpaths = ["tests"]
